--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,14 @@
 
     <name>SqlToMongoParser</name>
     <url>https://github.com/WalterInKitchen/SqlToMongoParser</url>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <antlr4.version>4.9.1</antlr4.version>
+        <jarFileName>SqlToMongoParser</jarFileName>
     </properties>
 
     <dependencies>
@@ -23,11 +25,13 @@
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>${antlr4.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-maven-plugin</artifactId>
             <version>${antlr4.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,6 +51,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,6 +71,7 @@
                     <visitor>true</visitor>
                     <sourceDirectory>src/main/resources/sql/grammer</sourceDirectory>
                     <outputDirectory>src/main/java/org/walterinkitchen/parser/sqlParser</outputDirectory>
+                    <libDirectory>src/main/resources/sql/grammer</libDirectory>
                     <arguments>
                         <argument>-package</argument>
                         <argument>org.walterinkitchen.parser.sqlParser</argument>
@@ -73,6 +85,24 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <finalName>${jarFileName}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
             </plugin>
         </plugins>
     </build>
