[A]支持分组后first、last计算

--- a/test/MongoDB/docker-compose.yml
+++ b/test/MongoDB/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   test-service-mongo:
-    image: mongo
+    image: mongo:4.4.3
     container_name: test-mongo
     networks:
       - mongo-default
